Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gunicode.pp


function g_utf8_get_char(p:Pgchar):Tgunichar;cdecl;external;
(* Const before type ignored *)
function g_utf8_get_char_validated(p:Pgchar; max_len:Tgssize):Tgunichar;cdecl;external;
(* Const before type ignored *)
function g_utf8_offset_to_pointer(str:Pgchar; offset:Tglong):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_pointer_to_offset(str:Pgchar; pos:Pgchar):Tglong;cdecl;external;
(* Const before type ignored *)
function g_utf8_prev_char(p:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_find_next_char(p:Pgchar; end:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_find_prev_char(str:Pgchar; p:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_strlen(p:Pgchar; max:Tgssize):Tglong;cdecl;external;
(* Const before type ignored *)
function g_utf8_substring(str:Pgchar; start_pos:Tglong; end_pos:Tglong):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_strncpy(dest:Pgchar; src:Pgchar; n:Tgsize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_truncate_middle(_string:Pgchar; truncate_length:Tgsize):Pgchar;cdecl;external;
{ Find the UTF-8 character corresponding to ch, in string p. These
   functions are equivalants to strchr and strrchr  }
(* Const before type ignored *)
function g_utf8_strchr(p:Pgchar; len:Tgssize; c:Tgunichar):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_strrchr(p:Pgchar; len:Tgssize; c:Tgunichar):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_strreverse(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_to_utf16(str:Pgchar; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgunichar2;cdecl;external;
(* Const before type ignored *)
function g_utf8_to_ucs4(str:Pgchar; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgunichar;cdecl;external;
(* Const before type ignored *)
function g_utf8_to_ucs4_fast(str:Pgchar; len:Tglong; items_written:Pglong):Pgunichar;cdecl;external;
(* Const before type ignored *)
function g_utf16_to_ucs4(str:Pgunichar2; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgunichar;cdecl;external;
(* Const before type ignored *)
function g_utf16_to_utf8(str:Pgunichar2; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_ucs4_to_utf16(str:Pgunichar; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgunichar2;cdecl;external;
(* Const before type ignored *)
function g_ucs4_to_utf8(str:Pgunichar; len:Tglong; items_read:Pglong; items_written:Pglong; error:PPGError):Pgchar;cdecl;external;
function g_unichar_to_utf8(c:Tgunichar; outbuf:Pgchar):Tgint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_validate(str:Pgchar; max_len:Tgssize; end:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_validate_len(str:Pgchar; max_len:Tgsize; end:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_utf8_strup(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_strdown(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_casefold(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
{*
 * GNormalizeMode:
 * @G_NORMALIZE_DEFAULT: standardize differences that do not affect the
 *     text content, such as the above-mentioned accent representation
 * @G_NORMALIZE_NFD: another name for %G_NORMALIZE_DEFAULT
 * @G_NORMALIZE_DEFAULT_COMPOSE: like %G_NORMALIZE_DEFAULT, but with
 *     composed forms rather than a maximally decomposed form
 * @G_NORMALIZE_NFC: another name for %G_NORMALIZE_DEFAULT_COMPOSE
 * @G_NORMALIZE_ALL: beyond %G_NORMALIZE_DEFAULT also standardize the
 *     "compatibility" characters in Unicode, such as SUPERSCRIPT THREE
 *     to the standard forms (in this case DIGIT THREE). Formatting
 *     information may be lost but for most text operations such
 *     characters should be considered the same
 * @G_NORMALIZE_NFKD: another name for %G_NORMALIZE_ALL
 * @G_NORMALIZE_ALL_COMPOSE: like %G_NORMALIZE_ALL, but with composed
 *     forms rather than a maximally decomposed form
 * @G_NORMALIZE_NFKC: another name for %G_NORMALIZE_ALL_COMPOSE
 *
 * Defines how a Unicode string is transformed in a canonical
 * form, standardizing such issues as whether a character with
 * an accent is represented as a base character and combining
 * accent or as a single precomposed character. Unicode strings
 * should generally be normalized before comparing them.
  }
type
  PGNormalizeMode = ^TGNormalizeMode;
  TGNormalizeMode =  Longint;
  Const
    G_NORMALIZE_DEFAULT = 0;
    G_NORMALIZE_NFD = G_NORMALIZE_DEFAULT;
    G_NORMALIZE_DEFAULT_COMPOSE = (G_NORMALIZE_DEFAULT)+1;
    G_NORMALIZE_NFC = G_NORMALIZE_DEFAULT_COMPOSE;
    G_NORMALIZE_ALL = (G_NORMALIZE_DEFAULT_COMPOSE)+1;
    G_NORMALIZE_NFKD = G_NORMALIZE_ALL;
    G_NORMALIZE_ALL_COMPOSE = (G_NORMALIZE_ALL)+1;
    G_NORMALIZE_NFKC = G_NORMALIZE_ALL_COMPOSE;
;
(* Const before type ignored *)

function g_utf8_normalize(str:Pgchar; len:Tgssize; mode:TGNormalizeMode):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_utf8_collate(str1:Pgchar; str2:Pgchar):Tgint;cdecl;external;
(* Const before type ignored *)
function g_utf8_collate_key(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_collate_key_for_filename(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_utf8_make_valid(str:Pgchar; len:Tgssize):Pgchar;cdecl;external;
{$endif}
{ __G_UNICODE_H__  }

implementation


end.
